style.css
@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 40px 100px;
  z-index: 1000;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header .logo {
  color: #fff;
  text-transform: uppercase;
  cursor: pointer;
  font-size: 28px;
}

header img {
  width: 180px;
  height: 150px;
}

.toggle {
  width: 45px;
  height: 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  cursor: pointer;
}
.toggle.active {
  cursor: pointer;
}
.toggle .line {
  width: 40px;
  height: 3px;
  background-color: #fff;
  transition: all 200ms ease-in-out;
  transform-origin: 28px 1px;
}
.toggle.active .line {
  background: #111;
  margin-left: 20px;
}

.toggle.active .line:first-child {
  transform: rotate(-45deg);
}
.toggle.active .line:nth-child(2) {
  display: none;
}
.toggle.active .line:last-child {
  transform: rotate(45deg);
}
.container {
  position: absolute;
  right: 0;
  width: 100%;
  min-height: 100vh;
  padding: 100px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #111;
  transition: 0.5s;
  z-index: 2;
}

.container video {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 0.8;
}
.text {
  position: relative;
  z-index: 10;
}

.text h2 {
  font-size: 5em;
  font-weight: 800;
  color: #fff;
  line-height: 1em;
  text-transform: uppercase;
}
.text h3 {
  font-size: 4em;
  font-weight: 700;
  color: #fff;
  line-height: 1em;
  text-transform: uppercase;
}
.text p {
  font-size: 1.1em;
  color: #fff;
  margin: 20px 0;
  font-weight: 400;
  /* max-width: 700px; */
  max-width: 500px;
}
.text a {
  display: inline-block;
  font-size: 1em;
  background: #fff;
  padding: 10px 30px;
  text-transform: uppercase;
  text-decoration: none;
  border-radius: 4px;
  font-weight: 500;
  margin-top: 10px;
  color: #111;
  letter-spacing: 2px;
  transition: all 200ms ease-in-out;
}
.text a:hover {
  background: #03a9f4;
  color: #fff;
}
.social {
  position: absolute;
  z-index: 10;
  bottom: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.social li {
  list-style: none;
}
.social li a {
  display: inline-block;
  margin-right: 20px;
  transform: scale(0.5);
  transition: all 200ms ease-in-out;
}
.social li a:hover {
  transform: scale(0.5) translateY(-15px);
  
}
.social li .fab {
  font-size: 60px;
  color: #fff;
}

.social li .fab:hover {
  color: #03a9f4;
}
.menu {
  display: none;
}
.menu.active {
  position: absolute;
  top: 0;
  right: 0;
  width: 300px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #fff;
}
.menu ul {
  position: relative;
}
.menu ul li {
  list-style: none;
}
.menu ul li a {
  text-decoration: none;
  font-size: 24px;
  color: #111;
}
.menu ul li a:hover {
  color: #03a9f4;
  cursor: pointer;
}

@media (max-width: 991px) {
  .container,
  .container header {
    padding: 40px;
  }
  .text h2 {
    font-size: 3em;
  }
  .text h3 {
    font-size: 2em;
  }
}

